--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/proxy": "^1.3.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
