Use different cookie module

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "bootswatch": "^4.2.1",
     "connect-mongodb-session": "^2.1.1",
+    "cookie-universal-nuxt": "^2.0.14",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "nuxt": "^2.4.0",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-universal-cookies": "0.0.5",
     "vue-carousel": "^0.17.0",
     "vue-cookies": "^1.5.12"
   },
