--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-universal-cookies": "0.0.5",
     "vue-carousel": "^0.17.0",
+    "vue-codemirror": "^4.0.6",
     "vue-cookies": "^1.5.12"
   },
   "devDependencies": {
