--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore . node_modules",
     "precommit": "npm run lint",
-    "test": "jest",
+    "test": "jest --pass-with-no-tests",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
