--- a/package.json
+++ b/package.json
@@ -1,65 +1,35 @@
 {
   "name": "pvpasm",
   "version": "1.0.0",
-  "description": "pvp assembly puzzles",
-  "author": "daniellimws",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . node_modules",
-    "precommit": "npm run lint",
-    "test": "jest --pass-with-no-tests",
-    "heroku-postbuild": "npm run build"
+    "dev": "nuxt",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "export": "nuxt-ts export",
+    "serve": "nuxt-ts serve",
+    "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@fortawesome/vue-fontawesome": "^0.1.5",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/proxy": "^1.3.1",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "bootswatch": "^4.2.1",
-    "connect-mongodb-session": "^2.1.1",
-    "cookie-universal-nuxt": "^2.0.14",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@nuxt/typescript-runtime": "^0.4.10",
+    "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.3.3",
     "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "googleapis": "^27.0.0",
-    "nodemailer": "^5.1.1",
-    "nuxt": "^2.4.0",
+    "express-session": "^1.17.1",
+    "nuxt": "^2.13.0",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-universal-cookies": "0.0.5",
-    "vue-carousel": "^0.17.0",
-    "vue-codemirror": "^4.0.6",
-    "vue-cookies": "^1.5.12"
+    "socket.io": "^2.3.0",
+    "vue-fontawesome": "0.0.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@nuxt/typescript-build": "^1.0.3",
+    "@nuxtjs/tailwindcss": "^2.0.0",
+    "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^24.1.0",
-    "eslint": "^5.0.1",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": ">=2.14.0",
-    "eslint-plugin-jest": ">=21.24.1",
-    "eslint-plugin-node": ">=7.0.1",
-    "eslint-plugin-prettier": "2.6.2",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "jest": "^24.1.0",
-    "nodemon": "^1.18.9",
-    "prettier": "1.14.3",
-    "vue-jest": "^3.0.2"
+    "babel-jest": "^26.0.1",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
+    "vue-jest": "^3.0.4"
   }
 }
